--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -35,12 +35,14 @@ dependencies {
 processResources {
     inputs.property 'mod_version', project.mod_version
     inputs.property 'minecraft_version', project.minecraft_version
+    inputs.property 'fabric_loader_version', project.fabric_loader_version
     inputs.property 'architectury_api_version', project.architectury_api_version
 
     filesMatching('fabric.mod.json') {
         expand mod_version: inputs.properties.mod_version,
                 minecraft_version: inputs.properties.minecraft_version,
-                architectury_api_version: inputs.properties.architectury_api_version
+                architectury_api_version: inputs.properties.architectury_api_version,
+                fabric_loader_version: inputs.properties.fabric_loader_version
     }
 }
 
