--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,10 @@ subprojects {
     base { archivesName = rootProject.archives_name }
 
     repositories {
+        maven {
+            name = 'ParchmentMC'
+            url = 'https://maven.parchmentmc.org'
+        }
     }
 
     loom {
@@ -36,7 +40,10 @@ subprojects {
 
     dependencies {
         minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"
-        mappings loom.officialMojangMappings()
+        mappings loom.layered() {
+            officialMojangMappings()
+            parchment("org.parchmentmc.data:parchment-1.20.1:2023.09.03@zip")
+        }
     }
 
     java {
