--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 # Done to increase the memory available to Gradle.
 org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
+dev_builds = true
 
 # Mod properties
 mod_version = 1.3
