--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -31,3 +31,10 @@ mandatory = true
 versionRange = "[${architectury_api_version},)"
 ordering = "AFTER"
 side = "BOTH"
+
+[[dependencies.underthestars]]
+modId = "terrablender"
+mandatory = true
+versionRange = "[${terrablender_version},)"
+ordering = "NONE"
+side = "BOTH"
