--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ allprojects {
     minecraft_version = rootProject.minecraft_version
     fabric_loader_version = rootProject.fabric_loader_version
     architectury_api_version = rootProject.architectury_api_version
+    terrablender_version = rootProject.terrablender_version
 
     repositories {
     }
