--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,7 @@ minecraft_version = 1.20.1
 fabric_loader_version = 0.17.0
 fabric_api_version = 0.92.7+1.20.1
 architectury_api_version = 9.2.14
-  # Limiting Forge to 47.1.47 so maybe we can make it compatible with Neo 1.20.1
+terrablender_version = 3.0.1.10
+  # We'll start Neo support with 1.20.2, last forge support on 1.20.6
 forge_version = 1.20.1-47.1.47
 forge_version_range = 47
