add proper terrablender integration also added template features so game no crash and also removed old_growth_oak_trees cause that does not exist so it crashed too yeah

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -10,5 +10,5 @@ dependencies {
 
     modImplementation "dev.architectury:architectury:$rootProject.architectury_api_version"
 
-    modImplementation "com.github.glitchfiend:TerraBlender-fabric:${rootProject.minecraft_version}-${rootProject.terrablender_version}"
+    modCompileOnly "com.github.glitchfiend:TerraBlender-fabric:${rootProject.minecraft_version}-${rootProject.terrablender_version}"
 }
